# EngramX

./: .gitignore  EngramX — The Open-Source Agent Memory Framework.md  README.md  pyproject.toml
engram/: __init__.py  adapters.py  client.py  config.py  embedding.py  jobs.py  lifecycle.py  reflection.py
engram/adapters/: __init__.py  chat.py
engram/storage/: __init__.py  chroma.py  mem0.py  neo4j.py  postgres.py  qdrant.py  redis.py  zep.py
engramx/: agent.py  client.py  policy.py  schema.py
engramx/adapters/: autogen.py  langchain.py  llamaindex.py
engramx/storage/: chroma.py  mem0.py  neo4j.py  ranking.py  redis.py  zep.py
examples/: 01_quickstart.py  02_policy_engine.py  03_observability.py  04_storage_backends.py  05_embeddings.py  06_chat_with_memory.py  07_framework_adapters.py  08_llm_reflection.py  09_agent_attribution.py  10_testing.py  11_background_jobs.py  12_langgraph_agent.py
tests/: test_adapters.py  test_harness.py  test_jobs.py  test_optional_drivers.py  test_policy_engine.py  test_retrieval_features.py  test_storage.py
